# museMiniCkr

./: CMakeLists.txt
src/: CMakeLists.txt
src/Chef/: CMakeLists.txt
src/Chef/src/: chef.cpp
src/Generators/: CMakeLists.txt
src/Generators/include/: base.h  born.h  fixed.h  isotropic.h
src/Generators/src/: base.cpp  born.cpp  fixed.cpp  isotropic.cpp
src/InitReader/src/: InitReader.cpp
src/MCGenPlugin/: CMakeLists.txt
src/MCGenPlugin/src/: MCGenPlugin.cpp
src/MCGenPlugin/src/include/: LinkDef.hh
src/MIDASreader/: CMakeLists.txt
src/MIDASreader/src/: #MIDASreader.cpp#  MIDASreader.cpp  MIDASreader_test.cpp
src/MIDASreader/src/include/: LinkDef.hh
src/Plugin/src/: Plugin.cpp
src/RecipeReader/src/: RecipeReader.cpp
src/SlowCtrl/: CMakeLists.txt
src/Survey/: CMakeLists.txt
src/Survey/CoilFitter/: CMakeLists.txt  coilfit.cc
src/Survey/SurveyConverter/: CMakeLists.txt
src/Survey/SurveyConverter/olympus/: Driftkammer-gross-IST.txt  Flugzeitdetektor-IST.txt  GEM-IST.txt  MoellerdetektorBox-IST.txt  targetcell-IST.txt
src/Survey/SurveyConverter/src/: ee-lumi.cpp  ep-lumi.cpp  sc-chamber.cpp  survey.cpp  tof.cpp  wc.cpp
src/Survey/SurveyConverter/src/include/: survey.h
src/Survey/SurveyFitter/: CMakeLists.txt  SurveyFitter.cc  SurveyFitter.py
src/alacarte/src/: alacarte.cpp  database.cpp  mainwindow.cpp
src/allyoucaneat/: CMakeLists.txt  TSuperClasses.cc  TSuperClasses.h  datataking.conf  dynamicbuttons.conf  examplebuttons.conf  helper.cc  histos.conf  mcdonalds-Big-Mac_small.xpm  printfcolors.h
src/allyoucaneat/macros/: MACRO_GEMamplitudes.C  MACRO_GEMrawdata.C  MACRO_GEMvsMWPC.C  MACRO_LeadGlassSpectra.C  MACRO_LumiHitMaps.C  MACRO_LumiTargetShape.C  MACRO_LumiWiremaps.C  MACRO_SYMBfasthistogramming.C  MACRO_SYMBoverview.C  MACRO_SiPMTDCs.C  MACRO_TBrowser.C  MACRO_TOFADCvsADC.C  MACRO_TOFSiPMefficiency.C  MACRO_TOFmeantimeEdep.C  MACRO_WCoverview.C  MakeNearOnlineROOTfiles  NearOnlineAuto.gnuplot  NearOnlineAuto.sh  daemonmode.sh  lumievent.sh  replayrunexplora.sh  testscript.sh
src/allyoucaneat/src/: TSuperClasses.cc  allyoucaneat.cpp  comparewindow.cpp  michelin.cpp
src/allyoucaneat/src/include/: LinkDef.hh  TSuperClasses.h  allyoucaneat.h  comparewindow.h  mLinkDef.hh
src/combine/src/: combine.cpp
src/cooker/: CMakeLists.txt
src/gdml/human_readable/: volumes.txt  volumes1_WC_cells.txt  volumes2.txt  volumes2_WC_cells.txt  volumes_big_fitting.txt  volumes_fitting.txt
src/gdml/python_gdml_generator/: gdmlModule.py  generateGDML.py  olympusWriter.py
src/helpers/: CMakeLists.txt
src/helpers/EPulseHeightCorrection/: CMakeLists.txt
src/helpers/EPulseHeightCorrection/src/: EPHCdemo.cpp  EPulseHeightCorrection.cpp  LinkDef.hh
src/plugins/: CMakeLists.txt
src/plugins/MCgenerators/: CMakeLists.txt
src/plugins/MCgenerators/born/: CMakeLists.txt
src/plugins/MCgenerators/born/src/: MCGenBorn.cpp
src/plugins/MCgenerators/born/src/include/: LinkDef.hh  MCGenBorn.h
src/plugins/MCgenerators/fixed/: CMakeLists.txt
src/plugins/MCgenerators/fixed/src/: MCGenFixed.cpp
src/plugins/MCgenerators/fixed/src/include/: LinkDef.hh  MCGenFixed.h
src/plugins/MCgenerators/isotropic/: CMakeLists.txt
src/plugins/MCgenerators/isotropic/src/: MCGenIsotropic.cpp
src/plugins/MCgenerators/isotropic/src/include/: LinkDef.hh  MCGenIsotropic.h
src/plugins/MCpropagators/Geant4/detectorlib/: CMakeLists.txt
src/plugins/MCpropagators/Geant4/detectorlib/include/: Magnetic_Field.h  cookerDetector.h  spline_interp.h
src/plugins/MCpropagators/Geant4/detectorlib/src/: Magnetic_Field.cpp  base_sd.cpp  detector.cpp
src/plugins/MCpropagators/Geant4/plugin/: CMakeLists.txt
src/plugins/MCpropagators/Geant4/plugin/src/: MCPropGeant4.cpp  Physics.cpp  cookerGen.cpp
src/plugins/analysis/: CMakeLists.txt
src/plugins/analysis/GEM_BH/src/: GEM_BH.cpp
src/plugins/analysis/GEM_BH/src/include/: GEM_BH.h
src/plugins/analysis/MUSEteleTracker/src/: MUSEteleTracker.cpp
src/plugins/analysis/MUSEteleTracker/src/include/: MUSEteleTracker.h
src/plugins/analysis/SlowCtrlDemo/src/: SlowCtrlDemo.cpp
src/plugins/detector/: CMakeLists.txt
src/plugins/detector/GEMtng/: CMakeLists.txt
src/plugins/detector/GEMtng/src/: GEMtng.cpp  plane.cpp  stack.cpp  telescope.cpp
src/plugins/detector/GEMtng/src/include/: GEMtng.h  LinkDef.hh  plane.h  stack.h  telescope.h
src/plugins/detector/LumiGEM/: CMakeLists.txt
src/plugins/detector/LumiGEM/LumiGEMlib/: CMakeLists.txt
src/plugins/detector/LumiGEM/LumiGEMlib/clustering/: #cLumiGEMDataRead.h#  cAPV.cxx  cAPV.h  cClusterFinder.cxx  cGEM.cxx  (+17 more)
src/plugins/detector/LumiGEM/PhysicsPlugin/: CMakeLists.txt
src/plugins/detector/LumiGEM/Plugin/: CMakeLists.txt
src/plugins/detector/SlowCtrl/: CMakeLists.txt
src/plugins/detector/SlowCtrl/src/: Det_SlowCtrl.cpp
src/plugins/detector/gemControl/: CMakeLists.txt
src/plugins/detector/gemControl/init/: gemControl.xml
src/plugins/detector/gemControl/src/: apv.cpp  binaryBlobReader.cpp  gem.cpp  gemControl.cpp
src/plugins/example/: CMakeLists.in
src/plugins/tools/: CMakeLists.txt
src/plugins/tools/Copy/: CMakeLists.txt
src/plugins/tools/Macro/: CMakeLists.txt
src/plugins/tools/mapper/: CMakeLists.txt
src/plugins/tools/mapper/init/: mapper.xml  mapper.xml.December_2016  mapper.xml.June_2017  mapper_fall2017.xml  spsmapper.py  sttmapper.py
src/plugins/tools/mapper/src/: mapper.cpp
src/plugins/visualization/EventDisplay/: CMakeLists.txt  README
src/plugins/visualization/EventDisplay/src/: Det_EventDisplay.cpp
src/tree/: CMakeLists.txt
src/tree/src/: BHtimetree.cpp  BMtree.cpp  Hittree.cpp  ParTypestree.cpp  SciFiOutput.cpp  TRB_TDCtree.cpp  TrackerTree.cpp  Trackhittree.cpp  gemControltree.cpp  generatortree.cpp  lumigemtree.cpp  mappedchannelstree.cpp  mqdctree.cpp  museadctree.cpp  muserawtree.cpp  musescalertree.cpp  musetdc1190tree.cpp  musetdc1290tree.cpp  musetrb3tree.cpp  scifitree.cpp  teletracktree.cpp  trb3tree.cpp  v1190tree.cpp  v1290tree.cpp  v792tree.cpp
src/tree/src/include/: LinkDef.hh
src/visualcooker/: CMakeLists.txt
(+126 files in other folders)
