# Check if cmake has the required version
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)
# Needed for cmake 2.6
IF(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

# Set project name
PROJECT(MIDASreader)
# Set the library version
SET(MIDASREADER_MAJOR_VERSION 1)
SET(MIDASREADER_MINOR_VERSION 1)
SET(MIDASREADER_PATCH_VERSION 0)
SET(MIDASREADER_VERSION "${MIDASREADER_MAJOR_VERSION}.${MIDASREADER_MINOR_VERSION}.${MIDASREADER_PATCH_VERSION}")
LIST(APPEND MIDASREADER_LIBRARY_PROPERTIES VERSION "${MIDASREADER_VERSION}" SOVERSION "${MIDASREADER_MAJOR_VERSION}")



SET(INCLUDES ${ROOT_INCLUDE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/include" "${CMAKE_SOURCE_DIR}/include")# create root dictionary

SET(LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/include/LinkDef.hh)
SET(DICTIONARY ${CMAKE_CURRENT_BINARY_DIR}/MIDASreaderDict.cpp)
ROOT_GENERATE_DICTIONARY("${CMAKE_SOURCE_DIR}/include/MIDASreader.h" "${LINKDEF}" "${DICTIONARY}" "${INCLUDES}")
LIST(APPEND SRCS ${DICTIONARY})
INCLUDE_DIRECTORIES(${INCLUDES})

add_library(MIDASreader src/MIDASreader.cpp ${SRCS} )
target_link_libraries(MIDASreader "-L${ROOT_LIBRARY_DIR}" ${ROOT_LIBRARIES}  musetree)

add_executable(MIDASreader_test src/MIDASreader_test.cpp  )
target_link_libraries(MIDASreader_test MIDASreader "-L${ROOT_LIBRARY_DIR}" ${ROOT_LIBRARIES}  musetree)

