CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)


add_subdirectory(MUSEteleTracker)
add_subdirectory(TrackingView)
#add_subdirectory(scifi_beamprofile)
#add_subdirectory(scifi_analysis)
#add_subdirectory(lowlevel)
#add_subdirectory(Trigger)
#add_subdirectory(Working_Histograms)
#add_subdirectory(trb_tdc_debug)
add_subdirectory(SlowCtrlDemo)
#add_subdirectory(GEM_BH)
#add_subdirectory(VertexRecon)
