CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)

add_subdirectory(gemControl)
add_subdirectory(LumiGEM)
#add_subdirectory(adctdc)
#add_subdirectory(trb3)
#add_subdirectory(scaler)
add_subdirectory(GEMtng)

#add_subdirectory(BM)
#add_subdirectory(BH)
add_subdirectory(SlowCtrl)

#add_subdirectory(strawtube)

#add_subdirectory(Trigger)
