# Check if cmake has the required version
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)
# Needed for cmake 2.6
IF(COMMAND cmake_policy)
        cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

# Set project name
PROJECT(LumiGEMlib)


# Set the library version
SET(LUMIGEMLIB_MAJOR_VERSION 1)
SET(LUMIGEMLIB_MINOR_VERSION 1)
SET(LUMIGEMLIB_PATCH_VERSION 0)
SET(LUMIGEMLIB_VERSION "${LUMIGEMLIB_MAJOR_VERSION}.${LUMIGEMLIB_MINOR_VERSION}.${LUMIGEMLIB_PATCH_VERSION}")
LIST(APPEND LUMIGEMLIB_LIBRARY_PROPERTIES VERSION "${LUMIGEMLIB_VERSION}" SOVERSION "${LUMIGEMLIB_MAJOR_VERSION}")


# find source and header files, set paths, includes...
SET(LIBNAME "LumiGEMlib")

FILE(GLOB SRCS clustering/*.cxx tracking/*.cxx tools/*.cxx)
FILE(GLOB HEADERS clustering/*.h tracking/*.h ${CMAKE_SOURCE_DIR}/include/muserawtree.h tools/*.cxx)

SET(INCLUDES ${ROOT_INCLUDE_DIR} ${CLHEP_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/clustering" "${CMAKE_CURRENT_SOURCE_DIR}/tracking" ${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${INCLUDES})

# build the library
MESSAGE(STATUS "adding library ${LIBNAME} with ${SRCS}")
ADD_LIBRARY(${LIBNAME} SHARED ${SRCS})

TARGET_LINK_LIBRARIES(${LIBNAME}  musetree "-L${ROOT_LIBRARY_DIR}" ${ROOT_LIBRARIES} "${CLHEP_LIBRARIES}") 


SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES ${LUMIGEMLIB_LIBRARY_PROPERTIES})

# install the library
INSTALL(TARGETS ${LIBNAME} RUNTIME DESTINATION ${BINDIR} LIBRARY DESTINATION ${LIBDIR} ARCHIVE DESTINATION ${LIBDIR})
